--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   build_runner: any
-  reflectable:
-    path: '../reflectable'
+  reflectable: 2.0.11
 
 dev_dependencies:
   flutter_test:
